# nitrokit-terminal

./: .env  .gitignore  Cargo.toml  README.md  build.rs  lcov.info
.github/: FUNDING.yml
.github/workflows/: ci.yml  codecov.yml  release.yml  rust-ci.yml
locales/: en.json  tr.json
messages/: en.json  source.json  tr.json  zh.json
scripts/: README.md  install.ps1  install.sh  uninstall.ps1  uninstall.sh
src/: Info.plist  i18n.rs  lib.rs  main.rs  nitrokit.icns  nitrokit.rc
src/commands/: code_quality.rs  config.rs  create_release.rs  dependency_update.rs  github_labels.rs  mod.rs  release_notes.rs  translation_sync.rs  version_management.rs
src/config/: mod.rs
src/tests/: config_test.rs  create_release_test.rs  dependency_update_test.rs  mod.rs  release_notes_test.rs  translation_sync.rs  version_management_test.rs
src/tests/commands/: code_quality_test.rs  dependency_update_test.rs  github_labels_test.rs  mod.rs  release_notes_test.rs  translation_sync_test.rs
src/tests/utils/: file_system_test.rs  git_test.rs  logging_test.rs  mod.rs  version_check_test.rs
src/utils/: file_system.rs  formatting.rs  git.rs  logging.rs  mod.rs  version.rs  version_check.rs
